Changed a bit of comments for future features. Added a new font for better visibility. Left the old one in case want to go back. || NEXT STEP: find out how to use sub-string to make sure zip code is only 5 numbers.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;200;300;400;500;700;800&family=Silkscreen&display=swap');
+
+
+/* To go back to original font just comment this in and the above out. */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,200&display=swap');
+
 
 @tailwind base;
 @tailwind components;
@@ -8,7 +13,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Playpen', sans-serif;
   scroll-behavior: smooth;
 }
 
